--- a/index.html
+++ b/index.html
@@ -55,5 +55,24 @@
         </tr>
       </tbody>
     </table>
+    <br />
+    <img src="imagenes/logo.png" alt="Logo de la empresa" width="30" />
+    <br />
+    <!-- Formulario -->
+    <form action="/" method="POST">
+      <label for="">Nombre</label>
+      <input name="nombre" type="text" placeholder="Nombre completo" /> <br />
+      <input name="clave" type="password" /> <br />
+      <input type="number" /> <br />
+      <input type="color" /> <br />
+      <input type="date" /> <br />
+      <input type="time" /> <br />
+      <input type="file" /> <br />
+      <input type="email" /> <br />
+      <textarea name="" id="" cols="30" rows="10"></textarea> <br>
+      <input type="tel"> <br>
+      <input type="submit">
+      <input type="reset">
+    </form>
   </body>
 </html>
