implementacion de css

--- a/html5.html
+++ b/html5.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/estilos.css">
     <title>Documento HTML5</title>
   </head>
   <body>
@@ -25,6 +26,9 @@
     </header>
     Información
     <main>
+      <ol>
+        <li>dadja</li>
+      </ol>
       <section>
         <article>Información</article>
         <article>Información</article>
@@ -38,10 +42,10 @@
     </section>
     <aside>Información tangencial</aside>
     <footer>
-        Información contacto <br>
-        &copy; DR &Oacute; <br>
-        canci&oacute;n <br>
-        Redes sociales
+      Información contacto <br />
+      &copy; DR &Oacute; <br />
+      canci&oacute;n <br />
+      Redes sociales
     </footer>
   </body>
 </html>
