estilos en los articles y botones

--- a/html5.html
+++ b/html5.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <h1>De que se trata la pagina</h1>
-      <img src="imagenes/" alt="Logo de la empresa" />
+      <img src="imagenes/persona.jpg" alt="Logo de la empresa" />
       Menu de navegacion
       <nav>
         <ul>
@@ -30,9 +30,22 @@
         <li>dadja</li>
       </ol>
       <section>
-        <article>Información</article>
-        <article>Información</article>
-        <article>Información</article>
+        <article>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo doloremque quasi quo totam suscipit fugit recusandae rerum odio nostrum alias beatae saepe dolores porro et, molestias, numquam voluptate aspernatur. Id!
+        </article>
+        <article>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente quas libero nesciunt voluptate illo fugiat unde aliquid veniam, maiores, quibusdam facere repudiandae consequuntur omnis ullam veritatis consequatur sint, debitis voluptas!
+        </article>
+        <article>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, laboriosam non ad iure officiis distinctio excepturi fuga consectetur at nostrum voluptas rerum debitis eum ex sed autem! Id, omnis eos.
+        </article>
+        <article>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, laboriosam non ad iure officiis distinctio excepturi fuga consectetur at nostrum voluptas rerum debitis eum ex sed autem! Id, omnis eos.
+        </article>
+        <article>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, laboriosam non ad iure officiis distinctio excepturi fuga consectetur at nostrum voluptas rerum debitis eum ex sed autem! Id, omnis eos.
+          lorem
+        </article>
       </section>
     </main>
     <section>Información</section>
@@ -40,7 +53,7 @@
     <section>
       <section>No se vale</section>
     </section>
-    <aside>Información tangencial</aside>
+    <aside>Información tangencial</aside>ß
     <footer>
       Información contacto <br />
       &copy; DR &Oacute; <br />
