--- a/practica01css/index.html
+++ b/practica01css/index.html
@@ -30,11 +30,11 @@
         <img src="img/slide2.jpg" alt="Slide" />
       </article>
     </section>
-    <section>
+    <section id="seccion02">
       <article>
         <img src="img/separador.jpg" alt="Separador" />
         <br />
-        <span>Una seccion</span>
+        <span class="nito unaSeccion">Una seccion</span>
         <br />
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae ad
         vitae aliquam provident maiores deserunt alias aut optio aspernatur vero
@@ -47,7 +47,8 @@
       </article>
       <article>
         <img src="img/separador.jpg" alt="Separador" />
-        <span>Otra seccion</span>
+        <br />
+        <span class="nito otraSeccion">Otra seccion</span>
         <br />
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat,
         magnam, neque numquam dolores ipsam, quibusdam distinctio facilis
@@ -61,7 +62,7 @@
       <article>
         <img src="img/separador.jpg" alt="Separador" />
         <br />
-        <span>Un video</span>
+        <span class="nito otraSeccion">Un video</span>
         <br />
         <img src="img/video.jpg" alt="Video" />
       </article>
@@ -69,7 +70,7 @@
 
     <footer>
       <article>
-        <span>Ultima busqueda</span>
+        <span class="unaSeccion nito">Ultima busqueda</span>
       </article>
       <article>&nbsp;</article>
       <article>&nbsp;</article>
