--- a/practica02css/index.html
+++ b/practica02css/index.html
@@ -4,37 +4,31 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Práctica 02 CSS3</title>
+    <link rel="stylesheet" href="css/estilos.css" />
   </head>
   <body>
     <header>
       <img src="img/banner.png" alt="Banner" />
-      <img src="img/granthams.png" alt="Granthams" />
-      <img src="img/paint.png" alt="Paint" />
+      <img src="img/granthams.png" alt="Granthams" id="granthams" />
+      <img src="img/paint.png" alt="Paint" id="paint" />
       <input type="search" placeholder="Search" />
       <nav>
         <ul>
-          Print
-        </ul>
-        <ul>
-          Copy
-        </ul>
-        <ul>
-          Finishing
-        </ul>
-        <ul>
-          Design
-        </ul>
-        <ul>
-          Exhibition
+          <li>Print</li>
+          <li>Copy</li>
+          <li>Finishing</li>
+          <li>Design</li>
+          <li>Exhibition</li>
         </ul>
       </nav>
     </header>
-    <section>
-      <article>
+    <section id="primerSeccion">
+      <article id="secc01art01">
         <img src="img/slide.jpg" alt="Slide" />
       </article>
-      <article>
-        We can offer...
+      <article id="secc01art02">
+        <span class="colorRosa letraGrande nito">We can offer...</span>
+
         <ul>
           <li>Highly Competitive Prices</li>
           <li>Variable Data</li>
@@ -46,21 +40,25 @@
           <li>Great Customer Service</li>
         </ul>
       </article>
-      <img src="img/bg_offer.png" alt="Offers" />
+      <img src="img/bg_offer.png" alt="Offers" id="bgOffer" />
     </section>
-    <section><article>01772 250207</article></section>
-    <section>
+    <section id="segundaSeccion">
+      <article>
+        <span class="colorRosa letraMediana nito">01772 250207</span>
+      </article>
+    </section>
+    <section id="terceraSeccion">
       <article>
         <img src="img/cerdito.png" alt="Cerdito" />
-        Save ths Spring
+        <span class="colorRosa nito">Save this Spring</span>
         <br />
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, laborum!
         <p></p>
-        Find our more...
+        <span class="colorRosa nito">Find our more...</span>
       </article>
       <article>
         <img src="img/hoja.png" alt="Hoja" />
-        ECO Friendly
+        <span class="colorVerde nito">ECO Friendly</span>
         <br />
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae
         eligendi voluptatem impedit quia! Consequuntur consectetur asperiores
@@ -68,18 +66,18 @@
       </article>
       <article>
         <img src="img/new.png" alt="Nuevo" />
-        Upload your file
+        <span class="colorAzul nito">Upload your file</span>
         <br />
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maiores
         reprehenderit vero earum et temporibus saepe eveniet, quibusdam
         inventore tempore voluptates fuga debitis doloribus. Alias, sequi.
         <p></p>
-        Upload Your File Now...
+        <span class="colorAzul nito">Upload Your File Now...</span>
       </article>
-      <article>
-        Stay in touch
+      <article id="secc03art04">
+        <span class="colorRosa letraMediana">Stay in touch</span>
         <br />
-        Join our mailing list today
+        Join our mailing list today <br />
         <br />
         <input type="email" placeholder="Email goes here" />
         <input type="button" value="Send" />
@@ -103,9 +101,9 @@
       <article>
         <input type="button" value="Valid HTML5" />
       </article>
-      <img src="img/icon_facebook.png" alt="Facebook" />
-      <img src="img/icon_twitter.png" alt="X" />
-      <img src="img/image-right.png" alt="Personas" />
+      <img src="img/icon_facebook.png" alt="Facebook" id="facebook" />
+      <img src="img/icon_twitter.png" alt="X" id="twitter" />
+      <img src="img/image-right.png" alt="Personas" id="personas" />
     </footer>
   </body>
 </html>
